--- a/Configuration Management/SVN/01.what_is_SVN.md
+++ b/Configuration Management/SVN/01.what_is_SVN.md
@@ -1,1 +1,73 @@
 # SVN(Subversion)
+
+<b>SVN(Subversion)</b>은 여러명이 작업하는 프로젝트의 버전관리나 각자 작성한 소스의 통합과 같은 문제를 해결하기 위해 저장소를 만들고 그곳에 소스를 저장해 소스의 중복이나 여러 문제를 해결하기 위한 <b>형상관리 툴</b>이다.  
+
+# SVN 작업흐름
+* 프로젝트 소스는 SVN 서버의 Trunk라는 곳에 위치한다.
+* 서버에 있는 소스를 자신의 local 저장소에 최초로 가져온다.(checkout)
+* 소스를 작성/수정한다.
+* commit 할 파일을 add 한다.
+* synchronize를 통해 저장소에 있는 소스와 싱크를 맞춘다.
+* update를 통해 서버에 있는 소스를 local 저장소로 가져온다.
+
+
+# SVN 용어
+
+## Repository
+<b>프로젝트 파일 및 변경 정보가 저장되는 장소</b>로 모든 프로젝트의 소스들은 이곳에 저장된다.  
+하나의 프로젝트 마다 하나의 저장소가 필요하고, 네트워크를 통해 여러 사람들이 접근 할 수 있고, 소스뿐만 아니라 소스의 변경 사항 모두 저장된다.
+
+## Trunk
+<b>프로젝트에서 가장 중심이 되는 디렉토리</b>로, 개발 소스를 commit 했을 때 소스가 모이는 장소이다.  
+모든 개발 작업은 trunk 디렉토리에서 이뤄지고, trunk 디렉토리 아래에는 소스들의 파일과 디렉토리가 들어가게 된다.
+
+## Branch
+<b>trunk에서 뻗어져 나온 나뭇가지를 의미</b>하고, <b>프로젝트 내의 작은 프로젝트의 개념</b>이다.  
+trunk에서 분리/복사한 소스로 버전별 배포판을 생성하거나 trunk와 별도로 운영환경을 위한 안정화된 소스 관리 목적으로 사용된다.
+
+## Tag
+<b>버전 별로 소스코드를 따로 관리하는 공간</b>이다.  
+버전 별로 태그를 붙여 tag 디렉토리 안에 보관하는 개념이다.  
+특정 시점의 상태 보존 목적으로 버전 별로 소스 코드를 따로 저장하는 공간이다.
+
+## Revision
+저장소에 저장된 각각의 파일 버전을 의미한다.  
+소스파일을 수정해서 commit 할 때 일정한 규칙에 의해 숫자가 하나씩 증가한다.  
+
+# SVN 명령어
+
+## import
+* 아무것도 없는 서버(원격) 저장소에 맨 처음으로 파일을 등록하는 것을 말한다.
+
+## checkout
+*  서버의 repository에 있는 컨텐츠를 최초로 사용자 컴퓨터로 가져올 때 사용하는 명령어<b>(최초 한번만 실행)</b>
+
+## export
+* 버전관리 파일들을 뺀 순수한 파일들만 빼내는 것
+
+## update
+* 서버 repository에 있는 파일(소스)들을 사용자 컴퓨터(로컬 저장소)로 받아오는 기능
+
+## add
+* 버전관리 대상으로 파일을 등록하는 것(업로드)  
+* 저장소에는 저장되지 않는다. (add 후 commit을 해야 적용된다)
+
+## commit
+* 사용자 컴퓨터에서 작업하고 있는 파일(소스)들을 서버의 Repository로 업로드 하는 기능  
+* 커밋 시 reveison 수가 올라간다.  
+* 커밋 전에는 update를 실행해서 최신소스로 변경하고, 컴파일을 성공했을 때에만 커밋을 해야한다.
+
+## status
+* 로컬 저장소에서 변경된 이후 아직 저장소로 commit되지 않은 내용을 확인 할 때 사용한다.
+* A: 추가됨, C: 충돌됨, D: 삭제됨, M: 수정됨, G: 병합됨
+
+## revert
+* 로컬 저장소의 내용을 이전 상태로 되돌리는 것
+
+## log
+* 저장소에 어떠한 것들이 변경 되었는지 revison을 통해 확인 할 수 있는 명령어
+
+## shelve
+* 작업하던 소스를 적용하지 않고 잠시 다른 작업을 해야할 때 백업해주는 기능
+* git의 stash와 동일한 기능
+
